
# rust-audio-processor/Cargo.toml
[package]
name = "rust-audio-processor"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] # Required for WASM

[dependencies]
wasm-bindgen = "0.2"
rustfft = "6.2"
num-complex = "0.4"
console_error_panic_hook = "0.1.7" # Better error messages

[dependencies.web-sys]
version = "0.3"
features = ["console", "Performance"]
